refactor compression support
Signed-off-by: Xin Li <xin.li@hedera.com>